Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,12 @@ steps:
     pytest
   displayName: 'pytest'
   
+- script: |
+    pip install pytest
+    pip install pytest-cov
+    pytest tests --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+  displayName: 'Test with pytest'
+  
 - task: PublishTestResults@2
   condition: succeededOrFailed()
   inputs:
